# ppipe

./: .exemple.env  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
hooks/: pre-commit
ppipe/webservice/: main.py
ppipe/webservice/celery/: tasks.py
ppipe/webservice/core/: config.py  security.py
ppipe/webservice/routes/: prediction.py  router.py  worker.py
tests/: conftest.py  test_ppipe.py
tests/test_api/: test_hearthbeat.py  test_prediction.py  test_token_auth.py
wikiqueue/webservice/: main.py
wikiqueue/webservice/celery/: tasks.py  worker.py
wikiqueue/webservice/core/: config.py
wikiqueue/webservice/routes/: hearthbeat.py  prediction.py  worker.py
