[tool.poetry]
name = "ppipe"
version = "0.1.0"
description = ""
authors = ["Arnau Diaz <diazarnau0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
redis = "^3.5.3"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
